[package]
name = "dump-json-refs"
version = "0.1.2"
edition = "2021"
description = "Extract canonical JSON/JSONL schemas and SQLite metadata for database reverse engineering."
repository = "https://github.com/widehyo1/dump-json-refs"
readme = "README.md"
license = "MIT"
keywords = ["json", "jsonl", "schema", "sqlite", "reverse-engineering"]
categories = ["command-line-utilities", "database"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pathdiff = "0.2"
